--- a/3_Lab/2_Task/A_Part/frontend.html
+++ b/3_Lab/2_Task/A_Part/frontend.html
@@ -5,7 +5,7 @@
     <title>2_Task</title>
 </head>
 <body>
-    <form action="A_backend.php" method="POST">
+    <form action="backend.php" method="POST">
         <p><textarea name="text"></textarea></p>
         <p><input type="submit" value="press me"></p>
     </form>
