--- a/3_Lab/2_Task/B_Part/frontend.html
+++ b/3_Lab/2_Task/B_Part/frontend.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <form action="some.php" method="GET">
+    <form action="backend.php" method="GET">
         <p> Name: <input type="text" name="name" /></p>
         <p> Surname: <input type="text" name="surname" /></p>
         <p> Age: <input type="number" name="age" /></p>
