pur correct php-file name

--- a/3_Lab/3_Task/frontend.html
+++ b/3_Lab/3_Task/frontend.html
@@ -1,5 +1,5 @@
 <body>
-<form action="some.php" method="POST">
+<form action="backend.php" method="POST">
     <p>Email: <input type="text" name="name" /></p>
     <p>Category: <select name="category">
             <option>Cars</option>
