--- a/3_Lab/3_Task/frontend.html
+++ b/3_Lab/3_Task/frontend.html
@@ -1,16 +1,16 @@
 <body>
-<form action="backend.php" method="POST">
-    <p>Email: <input type="text" name="name" /></p>
-    <p>Category: <select name="category">
-            <option>Cars</option>
-            <option>Cloth</option>
-            <option>Pets</option>
-            <option>Electronics</option>
-        </select>
-            </p>
-    <p>title: <input type="text" name="title"></p>
-    <p><b>Text of AD:</b></p>
-    <p><textarea rows="10" cols="45" name="text"></textarea></p>
-    <p><input type="submit" value="Add"></p>
-</form>
+    <form action="backend.php" method="POST">
+        <p> Email: <input type="text" name="name" /></p>
+        <p> Category: 
+            <select name="category">
+                <option> Smartphones</option>
+                <option> Computers</option>
+                <option> Laptops</option>
+            </select>
+        </p>
+        <p> Title: <input type="text" name="title"></p>
+        <p><b> Description:</b></p>
+        <p><textarea rows="10" cols="45" name="text"></textarea></p>
+        <p><input type="submit" value="add"></p>
+    </form>
 </body>
